--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </div>
     </div>
     <div class='message' id="message">message</div>
+    
     <div id="turn"></div>
+    <button id="gamestart">start</button>
     <button id="o">o</button>
     <button id="x">x</button>
     <button class='playagain' id="playagain">Play again</button>
