--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>tic-tac-toe</h1>
     <div class="mode" id="mode">
-        <button class="vsAI" id="vsRandomAI">vs AI</button>
+        <button class="vsAI" id="vsRandomAI">vs randomAI</button>
         <button class="vsAI" id="vsAdvancedAI">vs advancedAI</button>
         <button class="vshuman" id="vshuman">vs human</button>
     </div>
@@ -38,6 +38,6 @@
     <button id="x">x</button>
     <button class='playagain' id="playagain">Play again</button>
     <div class="menu" id="menu">menu</div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
