--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     
     <div id="turn"></div>
     <button id="gamestart">start</button>
-    <button id="o">o</button>
-    <button id="x">x</button>
+    <button id="o">o:first</button>
+    <button id="x">x:second</button>
     <button class='playagain' id="playagain">Play again</button>
     <div class="menu" id="menu">menu</div>
     <script src="scripts/script.js"></script>
