--- a/index.html
+++ b/index.html
@@ -47,32 +47,33 @@
     </div>
 
     <div class="game" id="game">
-        <div class="gameMode" id="gameMode"></div>
-        <div class="turnMode" id="turnMode"></div>
-
-        <div id="board" class="board">
-            <div class="row" id="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row" id="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row" id="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+        <div>
+            <div class="gameMode" id="gameMode"></div>
+            <div id="board" class="board">
+                <div class="row" id="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+                <div class="row" id="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+                <div class="row" id="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
             </div>
         </div>
-        <div class='message' id="message">message</div>
-        <div id="turn"></div>
-        <button class='playagain' id="playagain">Play again</button>
-        <button id="goback">go back</button>
-        <button class="btn btn-primary"></button>
-        <div class="menu" id="menu">menu</div>
+        <div class="gameinfo">
+            <div class='message' id="message">message</div>
+            <div id="turn"></div>
+            <button class='playagain' id="playagain">Play again</button>
+            <button id="goback">go back</button>
+            <div class="menu" id="menu">menu</div>
+        </div>
     </div>
     <script src="scripts/script.js"></script>
 </body>
